# temp_tauri-problem-example

./: README.md  package.json  quasar.conf.js
src-tauri/: Cargo.toml  tauri.conf.json
